feat: update route protection using middleware
